--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -32,6 +32,7 @@
 .gap.svelte-vt1mxs {
     gap: 0;
     flex-direction: column;
+    overflow: visible;
 }
 div.svelte-sa48pu>*, div.svelte-sa48pu>.form>* {
     flex: 1 1 0%;
@@ -49,7 +50,7 @@ div.svelte-sa48pu>*, div.svelte-sa48pu>.form>* {
 #output-text{
     position: absolute;
     top: 11px;
-    z-index: 2;
+    z-index: 3;
 }
 .output-text{
     right: 390px;
@@ -71,7 +72,7 @@ div.svelte-sa48pu>*, div.svelte-sa48pu>.form>* {
     position: absolute;
     right: 40px;
     top: 1px;
-    z-index: 2;
+    z-index: 3;
 }
 /*#toggle-off{*/
 /*    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' height='48px' viewBox='0 0 24 24' width='48px' fill='%23FFFFFF'%3e%3cpath d='M0 0h24v24H0z' fill='none'/%3e%3cpath d='M17 7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h10c2.76 0 5-2.24 5-5s-2.24-5-5-5zm0 8c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z'/%3e%3c/svg%3e");*/
@@ -892,8 +893,22 @@ div.svelte-362y77>*, div.svelte-362y77>.form>* {
     flex-shrink: 0;
     box-sizing: content-box;
     z-index: 10;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    -webkit-overflow-scrolling: touch;
 }
-
+#past-chats-row{
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    -webkit-overflow-scrolling: touch;
+}
+#chat-controls::-webkit-scrollbar {
+  display: none;
+}
+#past-chats-row::-webkit-scrollbar {
+  display: none;
+}
 #past-chats-row:not(.negative-header) {
     max-width: calc(85vw - var(--header-width));
 }
@@ -1213,7 +1228,9 @@ div.svelte-362y77>*, div.svelte-362y77>.form>* {
 #past-chats-row {
     border-right: 1px solid #d9d9d0;
 }
-
+#past-chats-toggle{
+    top: -1px;
+}
 #past-chats-toggle,
 #chat-controls-toggle,
 #navigation-toggle {
