--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -55,7 +55,7 @@ div.svelte-sa48pu>*, div.svelte-sa48pu>.form>* {
 .output-text{
     right: 390px;
 }
-.output-move{
+.output-back{
     right: 100px;
 }
 .toggle{
