--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -49,7 +49,7 @@ div.svelte-sa48pu>*, div.svelte-sa48pu>.form>* {
 }
 #output-text{
     position: absolute;
-    top: 11px;
+    top: 13px;
     z-index: 3;
 }
 .output-text{
@@ -73,6 +73,8 @@ div.svelte-sa48pu>*, div.svelte-sa48pu>.form>* {
     right: 40px;
     top: 1px;
     z-index: 3;
+    background-size: contain;
+    background-position: 0px 2px;
 }
 /*#toggle-off{*/
 /*    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' height='48px' viewBox='0 0 24 24' width='48px' fill='%23FFFFFF'%3e%3cpath d='M0 0h24v24H0z' fill='none'/%3e%3cpath d='M17 7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h10c2.76 0 5-2.24 5-5s-2.24-5-5-5zm0 8c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z'/%3e%3c/svg%3e");*/
@@ -1082,11 +1084,11 @@ div.svelte-362y77>*, div.svelte-362y77>.form>* {
 
 @media screen and (width <= 408px) {
     #past-chats-toggle.past-chats-open {
-        top: 28px;
+        /*top: 28px;*/
     }
 
     #chat-controls-toggle.chat-controls-open {
-        top: 28px;
+        /*top: 28px;*/
         /* right: calc(16px + min(260px, 80vw)) !important; */
     }
 }
@@ -1189,7 +1191,6 @@ div.svelte-362y77>*, div.svelte-362y77>.form>* {
 .dark #navigation-toggle {
     color: white;
 }
-
 .dark svg {
     fill: white;
     color: white;
@@ -1201,7 +1202,7 @@ div.svelte-362y77>*, div.svelte-362y77>.form>* {
     }
 
     .dark #chat-controls-toggle.chat-controls-open {
-        background: var(--darker-gray);
+        background: #20212300;
     }
 }
 
